Si Apic v0.1.2 Beta Release Release Note: Fix Bug 1. Desain yang numpuk 2. Fix the width and height on Xiaomi with MIUI 11 above, Samsung Device 3. Fix allocation memory for device with below 1024MB RAM 4. Clean after closing application
Added function:
1. Custom Info Window Adapter, with extended information
2. Full stack mapping for SDK 29 and SDK 30

https://github.com/maslakonetop/siapic

--- a/app/src/main/res/layout-sw480dp/activity_video_potensi.xml
+++ b/app/src/main/res/layout-sw480dp/activity_video_potensi.xml
@@ -44,14 +44,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="411dp" />
+        app:layout_constraintGuide_end="464dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline33"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="411dp" />
+        app:layout_constraintGuide_begin="463dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline34"
@@ -65,14 +65,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="814dp" />
+        app:layout_constraintGuide_end="1097dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline47"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="194dp" />
+        app:layout_constraintGuide_begin="142dp" />
 
     <include
         layout="@layout/menu_atas"
@@ -86,8 +86,8 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ScrollView
-        android:layout_width="412dp"
-        android:layout_height="571dp"
+        android:layout_width="546dp"
+        android:layout_height="960dp"
         android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,8 +97,8 @@
         app:layout_constraintVertical_bias="1.0">
 
         <RelativeLayout
-            android:layout_width="392dp"
-            android:layout_height="623dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btnNonton"
@@ -452,10 +452,10 @@
 
             <EditText
                 android:id="@+id/editTextTextMultiLine"
-                android:layout_width="168dp"
-                android:layout_height="69dp"
+                android:layout_width="326dp"
+                android:layout_height="53dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="7dp"
+                android:layout_marginRight="0dp"
                 android:ems="10"
                 android:enabled="false"
                 android:fontFamily="@font/arialn"
@@ -473,7 +473,7 @@
                 android:layout_below="@+id/btnNonton"
                 android:layout_alignParentTop="false"
                 android:layout_alignParentRight="true"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="33dp"
                 android:layout_marginRight="7dp"
                 android:layout_toRightOf="@+id/imageView18"
                 android:ems="10"
@@ -493,8 +493,9 @@
                 android:layout_below="@+id/btnNonton2"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="-9dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginRight="-11dp"
                 android:layout_toRightOf="@id/imageView19"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -510,7 +511,8 @@
                 android:layout_below="@+id/btnNonton3"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="25dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="22dp"
                 android:layout_marginRight="7dp"
                 android:layout_toRightOf="@id/imageView20"
                 android:ems="10"
@@ -528,8 +530,9 @@
                 android:layout_below="@+id/btnNonton4"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="7dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="37dp"
+                android:layout_marginRight="6dp"
                 android:layout_toRightOf="@id/imageView21"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -546,8 +549,9 @@
                 android:layout_below="@+id/btnNonton5"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="7dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="39dp"
+                android:layout_marginRight="4dp"
                 android:layout_toRightOf="@id/imageView23"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -602,7 +606,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginLeft="2dp"
-                android:layout_marginTop="47dp"
+                android:layout_marginTop="34dp"
                 android:layout_marginRight="5dp"
                 android:layout_toRightOf="@id/imageView25"
                 android:ems="10"
@@ -621,7 +625,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginLeft="7dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="42dp"
                 android:layout_marginRight="8dp"
                 android:layout_toRightOf="@id/imageView26"
                 android:ems="10"
@@ -639,9 +643,9 @@
                 android:layout_below="@+id/btnNonton10"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="37dp"
+                android:layout_marginRight="6dp"
                 android:layout_toRightOf="@id/imageView25"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -678,7 +682,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="8dp"
                 android:layout_toRightOf="@id/imageView25"
                 android:ems="10"
@@ -696,9 +700,9 @@
                 android:layout_below="@+id/btnKerang"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="43dp"
+                android:layout_marginRight="6dp"
                 android:layout_toRightOf="@id/imgTengiri"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -715,9 +719,9 @@
                 android:layout_below="@+id/btnTengiri"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="33dp"
+                android:layout_marginRight="6dp"
                 android:layout_toRightOf="@id/imgRawaBendungan"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -734,9 +738,9 @@
                 android:layout_below="@+id/btnRawaBendungan"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="39dp"
+                android:layout_marginRight="13dp"
                 android:layout_toRightOf="@id/imgKambingKrPucung"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -829,9 +833,9 @@
                 android:layout_below="@+id/btnGurame"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="43dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="66dp"
+                android:layout_marginRight="8dp"
                 android:layout_toRightOf="@id/imgSebutret"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -887,7 +891,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="56dp"
                 android:layout_marginRight="11dp"
                 android:layout_toRightOf="@id/imgPantaiWidarapayung"
                 android:ems="10"
@@ -905,9 +909,9 @@
                 android:layout_below="@+id/btnPantaiWidarapayung"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="13dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="68dp"
+                android:layout_marginRight="6dp"
                 android:layout_toRightOf="@id/imgOss"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -972,8 +976,8 @@
                 android:layout_height="111dp"
                 android:layout_below="@id/imageView19"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="30dp"
                 app:srcCompat="@drawable/budidayasidat" />
 
             <ImageView
@@ -1032,7 +1036,7 @@
                 android:layout_height="111dp"
                 android:layout_below="@id/imageView25"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="25dp"
                 android:layout_marginTop="25dp"
                 app:srcCompat="@drawable/natadecoco" />
 
@@ -1132,8 +1136,8 @@
                 android:layout_height="111dp"
                 android:layout_below="@id/imgHutanPayau"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="41dp"
                 app:srcCompat="@drawable/ikangurami" />
 
             <ImageView
@@ -1143,7 +1147,7 @@
                 android:layout_below="@id/imgGurame"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="57dp"
                 app:srcCompat="@drawable/sebutret" />
 
             <ImageView
@@ -1153,7 +1157,7 @@
                 android:layout_below="@id/imgSebutret"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="43dp"
                 app:srcCompat="@drawable/airpanscipari" />
 
             <ImageView
@@ -1163,7 +1167,7 @@
                 android:layout_below="@id/imgHotSpring"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="42dp"
                 app:srcCompat="@drawable/wisatabahari" />
 
             <ImageView
@@ -1173,7 +1177,7 @@
                 android:layout_below="@id/imgWisataBahari"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="42dp"
                 app:srcCompat="@drawable/widarapayung" />
 
             <ImageView
