--- a/app/src/main/res/layout/activity_potensi_umum.xml
+++ b/app/src/main/res/layout/activity_potensi_umum.xml
@@ -11,6 +11,7 @@
         android:id="@+id/rltUmum"
         android:layout_width="match_parent"
         android:layout_height="129dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="652dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rltUmum">
@@ -55,9 +57,10 @@
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="634dp"
             android:layout_marginTop="5dp"
-            tools:context=".MapPotensiUmum" />
+            tools:context=".MapPotensiUmum"
+            android:layout_marginBottom="5dp"/>
 
     </RelativeLayout>
 
@@ -65,6 +68,7 @@
         android:id="@+id/fabmenu"
         android:layout_width="93dp"
         android:layout_height="59dp"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
         android:focusable="true"
@@ -72,7 +76,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="5dp"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/back" />
 
